# SexFM-Client

./: CHANGELOG.md  README.md  app.vue  error.vue  eslint.config.mjs  nuxt.config.ts  package.json  sexfm.key.pub  tailwind.config.ts
.github/workflows/: deploy.yml  publish.yml
assets/: global.css
components/: AllPopups.vue  AutoUpdate.vue  AutoUpdateMessage.vue  Banner.vue  Help.vue  LastPlayed.vue  LastPlayedButton.vue  Logo.vue  NowPlaying.vue  PlayButton.vue  SexIcon.vue  SexLink.vue  Titlebar.vue  VolumeControl.vue
components/Popup/: Base.vue  Help.vue  LastPlayed.vue  Settings.vue
plugins/: vue-audio-visual.client.ts
public/: a.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
stores/: app.ts  auto-update.ts  metadata.ts  popups.ts  settings.ts
tauri-only/: discordrpc.ts
types/: playing.d.ts  settings.d.ts
