[package]
name = "SexFM-Player"
version = "1.4.0"
description = "An unofficial sexfm.live player"
authors = ["PikaDude"]
license = ""
repository = "https://github.com/PikaDude/SexFM-Player"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
log = "0.4.25"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-log = "2.2.1"
tauri-plugin-shell = "2.2.0"
tauri-plugin-drpc = "0.1.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.5.0"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = 3 # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.
